# ddl-checker

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
ddl_pre_commit_checker/: ddl_checker.py  main.py
